--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,8 +1,9 @@
 @import "../../styles/global.scss";
 
 .footer {
-    padding: 2rem;
-    background-color: $footer_color;
+    padding: 4rem 2rem 2rem 2rem;
+    background: #9e8272;
+    background: linear-gradient(0deg, #9e8272 0%, #ffffff 100%);
     .footer-item {
         display: flex;
         flex-direction: column;
@@ -15,6 +16,12 @@
             margin-bottom: .2rem;
             text-align: center;
         }
+        .item-anchor {
+            font-size: .8rem;
+            font-weight: 300;
+            color: $black_color;
+            text-align: center;
+        }
         .item-paragraph {
             font-size: .8rem;
             font-weight: 300;
@@ -22,37 +29,46 @@
             text-align: center;
             max-width: 16rem;
         }
-        .item-anchor {
-            font-size: .8rem;
+        .item-paragraph-dev {
+            font-size: .7rem;
             font-weight: 300;
             color: $black_color;
             text-align: center;
-        }
-        .item-anchor-dev {
-            font-size: .8rem;
-            font-weight: 300;
-            color: $black_color;
-            margin-left: .25rem;
+            max-width: 16rem;
+            .anchor-dev {
+                font-size: .7rem;
+                font-weight: 300;
+                color: $black_color;
+                margin-left: .25rem;
+                text-decoration: none;
+            }
         }
     }
 }
 
 @media (min-width: 768px) and (max-width: 1023px){
     .footer {
-        padding: 3rem;
+        padding: 6rem 3rem 3rem 3rem;
         .footer-item {
+            margin-bottom: 1.8rem;
             .item-title {
                 font-size: 1.6rem;
+                margin-bottom: .5rem;
+            }
+            .item-anchor {
+                font-size: 1.4rem;
             }
             .item-paragraph {
                 font-size: 1.4rem;
                 max-width: 30rem;
             }
-            .item-anchor {
-                font-size: 1.4rem;
-            }
-            .item-anchor-dev {
-                font-size: 1.4rem;
+            .item-paragraph-dev {
+                font-size: 1.2rem;
+                max-width: 30rem;
+                margin-top: .3rem;
+                .anchor-dev {
+                    font-size: 1.2rem;
+                }
             }
         }
     }
@@ -62,22 +78,30 @@
     .footer {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        padding: 4rem;
+        padding: 8rem 4rem 4rem 4rem;
         .footer-item {
             align-items: flex-start;
+            margin-bottom: 1.5rem;
             .item-title {
                 font-size: 1.6rem;
+                margin-bottom: .5rem;
+            }
+            .item-anchor {
+                font-size: 1.4rem;
             }
             .item-paragraph {
                 font-size: 1.4rem;
                 max-width: 28rem;
                 text-align: start;
             }
-            .item-anchor {
-                font-size: 1.4rem;
-            }
-            .item-anchor-dev {
-                font-size: 1.4rem;
+            .item-paragraph-dev {
+                font-size: 1.2rem;
+                max-width: 28rem;
+                text-align: start;
+                margin-top: .5rem;
+                .anchor-dev {
+                    font-size: 1.2rem;
+                }
             }
         }
     }
