--- a/src/pages/location/location.scss
+++ b/src/pages/location/location.scss
@@ -19,6 +19,8 @@
             padding: 2rem;
             gap: 1rem;
             .iframe-paragraph {
+                display: flex;
+                flex-direction: column;
                 font-size: 1rem;
                 color: #010101;
                 text-align: center;
@@ -38,6 +40,12 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            #map {
+                width: 40rem;
+                height: 20rem;
+                border: none;
+                border-radius: .4rem;
+            }
             .iframe {
                 width: 40rem;
                 height: 20rem;
