--- a/src/components/cards/carouselcard/carouselcard.scss
+++ b/src/components/cards/carouselcard/carouselcard.scss
@@ -1,25 +1,41 @@
-.home-page-card {
+@import "../../../styles/global.scss";
+
+.carousel-card {
     display: flex;
     flex-direction: column;
     margin: 4.5rem 0 1rem 0;
-    .home-page-card-photo {
+    .carousel-card-photo {
         height: 350px;
         width: 100%;
         object-fit: cover;
     }
-    .home-page-card-text-area {
+    .carousel-card-buttons {
+        display: flex;
+        justify-content: center;
+        gap: .8rem;
+        margin-top: 1rem;
+        .circle-button {
+            width: .8rem;
+            height: .8rem;
+            background-color: transparent;
+            border-radius: 50%;
+            border: solid .1rem #6d6d6d;
+            cursor: pointer;
+        } 
+    }
+    .carousel-card-text-area {
         padding: 1rem 1.8rem .5rem 1.8rem;
         border-radius: 0 0 5px 5px;
         background: rgba( 255, 255, 255, 0.15 );
         backdrop-filter: blur( 6px );
         -webkit-backdrop-filter: blur( 6px );
         border: 1px solid rgba( 255, 255, 255, 0.18 );
-        .home-page-card-text-area-paragraph {
+        .carousel-card-text-area-paragraph {
             font-size: 1.1rem;
             max-width: 272px;
             text-align: center;
         }
-        .home-page-card-button-area{
+        .carousel-card-button-area{
             display: flex;
             align-items: center;
             justify-content: center;
@@ -27,7 +43,7 @@
             gap: .5rem;
             flex-wrap: wrap;
             margin: .5rem 0;
-            .home-page-card-button-area-paragraph {
+            .carousel-card-button-area-paragraph {
                 font-size: .7rem;
             }
         }
@@ -35,24 +51,31 @@
 }
 
 @media (min-width: 321px) and (max-width: 767px) {
-    .home-page-card {
+    .carousel-card {
         margin-top: 0;
         margin: 5.5rem 0 1rem 0;
         box-shadow: 1px 1px 3px #999999;
         width: 320px;
-        .home-page-card-photo {
+        .carousel-card-photo {
             width: 100%;
             height: 350px;
             border-radius: 5px 5px 0 0;
         }
-        .home-page-card-text-area {
-            padding: 1.5rem 1.6rem 2rem 1.6rem;
+        .carousel-card-buttons .circle-button {
+            width:  .8rem;
+            height: .8rem;
+            background-color: transparent;
+            border-radius: 50%;
+            border: solid .1rem #6d6d6d;
+        }
+        .carousel-card-text-area {
+            padding: 1rem 1.6rem 2rem 1.6rem;
             border-radius: 0 0 5px 5px;
-            .home-page-card-text-area-paragraph{
+            .carousel-card-text-area-paragraph{
                 font-size: 1.2rem;
                 text-align: left;
             }
-            .home-page-card-button-area {
+            .carousel-card-button-area {
                 display: flex;
                 align-items: center;
                 justify-content: flex-start;
@@ -60,7 +83,7 @@
                 gap: .5rem;
                 flex-wrap: wrap;
                 margin: .5rem 0;
-                .home-page-card-button-area-paragraph {
+                .carousel-card-button-area-paragraph {
                     font-size: .8rem;
                 }
             }
@@ -69,24 +92,32 @@
 }
 
 @media (min-width: 768px) and (max-width: 1023px) {
-    .home-page-card {
+    .carousel-card {
         margin: 9rem 0 1rem 0;
         box-shadow: 1px 1px 3px #999999;
         width: 32rem;
-        .home-page-card-photo  {
+        .carousel-card-photo  {
             width: 100%;
             height: 32rem;
             border-radius: 5px 5px 0 0;
         }
-        .home-page-card-text-area {
-            padding: 2.5rem 2.6rem 3rem 2.6rem;
+        .carousel-card-buttons {
+            margin-top: 1.5rem;
+            gap: 1.2rem;
+            .circle-button {
+                width:  1.4rem;
+                height: 1.4rem;
+            }
+        }
+        .carousel-card-text-area {
+            padding: 1.5rem 2.6rem 3rem 2.6rem;
             border-radius: 0 0 5px 5px;
-            .home-page-card-text-area-paragraph {
+            .carousel-card-text-area-paragraph {
                 font-size: 1.8rem;
                 max-width: 27rem;
                 text-align: left;
             }
-            .home-page-card-button-area {
+            .carousel-card-button-area {
                 display: flex;
                 align-items: center;
                 justify-content: flex-start;
@@ -94,33 +125,42 @@
                 gap: 1rem;
                 flex-wrap: wrap;
                 margin: .5rem 0;
-                .home-page-card-button-area-paragraph {
+                .carousel-card-button-area-paragraph {
                     font-size: 1.3rem;
                 }
             }
         }
+        
     }
 }
 
 @media (min-width: 1024px) and (max-width: 1439px) {
-    .home-page-card {
+    .carousel-card {
         margin: 11rem 0 1rem 0;
         box-shadow: 1px 1px 3px #999999;
         width: 32rem;
-        .home-page-card-photo  {
+        .carousel-card-photo  {
             width: 100%;
             height: 30rem;
             border-radius: 5px 5px 0 0;
         }
-        .home-page-card-text-area{
-            padding: 2.5rem 2.6rem 3rem 2.6rem;
+        .carousel-card-buttons {
+            margin-top: 1.5rem;
+            gap: 1.2rem;
+            .circle-button {
+                width:  1.4rem;
+                height: 1.4rem;
+            }
+        }
+        .carousel-card-text-area{
+            padding: 1.5rem 2.6rem 3rem 2.6rem;
             border-radius: 0 0 5px 5px;
-            .home-page-card-text-area-paragraph{
+            .carousel-card-text-area-paragraph{
                 font-size: 1.8rem;
                 max-width: 27rem;
                 text-align: left;
             }
-            .home-page-card-button-area {
+            .carousel-card-button-area {
                 display: flex;
                 align-items: center;
                 justify-content: flex-start;
@@ -128,7 +168,7 @@
                 gap: 1rem;
                 flex-wrap: wrap;
                 margin: .5rem 0;
-                .home-page-card-button-area-paragraph {
+                .carousel-card-button-area-paragraph {
                     font-size: 1.3rem;
                 }
             }
@@ -137,24 +177,32 @@
 }
 
 @media (min-width: 1440px) {
-    .home-page-card {
+    .carousel-card {
         margin: 9rem 0 1rem 0;
         box-shadow: 1px 1px 3px #999999;
         width: 28rem;
-        .home-page-card-photo {
+        .carousel-card-photo {
             width: 100%;
             height: 30rem;
             border-radius: 5px 5px 0 0;
         }
-        .home-page-card-text-area {
-            padding: 2.5rem 2.4rem 2rem 2.4rem;
+        .carousel-card-buttons {
+            margin-top: 1.5rem;
+            gap: 1.2rem;
+            .circle-button {
+                width:  1.4rem;
+                height: 1.4rem;
+            }
+        }
+        .carousel-card-text-area {
+            padding: 1.5rem 2.4rem 2rem 2.4rem;
             border-radius: 0 0 5px 5px;
-            .home-page-card-text-area-paragraph {
+            .carousel-card-text-area-paragraph {
                 font-size: 1.6rem;
                 max-width: 23rem;
                 text-align: left;
             }
-            .home-page-card-button-area {
+            .carousel-card-button-area {
                 display: flex;
                 align-items: center;
                 justify-content: flex-start;
@@ -162,7 +210,7 @@
                 gap: 1rem;
                 flex-wrap: wrap;
                 margin: .5rem 0;
-                .home-page-card-button-area-paragraph {
+                .carousel-card-button-area-paragraph {
                     font-size: 1.1rem;
                 }
             }
