--- a/src/components/cards/carouselcard/carouselcard.scss
+++ b/src/components/cards/carouselcard/carouselcard.scss
@@ -15,8 +15,8 @@
         gap: .8rem;
         margin-top: 1rem;
         .circle-button {
-            width: .8rem;
-            height: .8rem;
+            width: 1rem;
+            height: 1rem;
             background-color: transparent;
             border-radius: 50%;
             border: solid .1rem #6d6d6d;
@@ -62,8 +62,6 @@
             border-radius: 5px 5px 0 0;
         }
         .carousel-card-buttons .circle-button {
-            width:  .8rem;
-            height: .8rem;
             background-color: transparent;
             border-radius: 50%;
             border: solid .1rem #6d6d6d;
