dev web portfolio

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -40,7 +40,7 @@
                 font-weight: 300;
                 color: $black_color;
                 margin-left: .25rem;
-                text-decoration: none;
+                text-decoration: underline;
             }
         }
     }
