--- a/src/pages/contacts/contacts.scss
+++ b/src/pages/contacts/contacts.scss
@@ -3,112 +3,4 @@
     justify-content: center;
     flex-direction: column;
     margin-top: 12rem;
-    .bendita-beleza-logo-container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        .bendita-beleza-image {
-            width: 6rem;
-            height: 6rem;
-            filter: brightness(0%);
-            margin-bottom: .5rem;
-        }
-        .bendita-beleza-title {
-            text-align: center;
-            font-size: 1.6rem;
-            font-weight: 300;
-            font-family: "Merriweather", 'Inter', sans-serif;
-            color: #010101;
-            margin-bottom: .1rem;
-        }
-        .bendita-beleza-paragraph {
-            font-family: "Merriweather", 'Inter', sans-serif;
-            font-weight: 200;
-            font-size: 1rem;
-            color: #010101;
-        }
-    }
-    .social-links {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        gap: .5rem;
-        margin: .7rem 0 1rem 0;
-        .social-link {
-            display: flex;
-            align-items: center;
-            gap: 1rem;
-            color: #010101;
-            font-size: 1.35rem;
-        }
-    }
-    .whatsapp-call {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: .8rem;
-        margin-bottom: 6rem;
-        .whatsapp-call-paragraph {
-            font-size: 1rem;
-            text-align: center;
-            max-width: 10rem;
-        }
-    }
-}
-
-@media (min-width: 768px) {
-    #contacts-page {
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        .bendita-beleza-logo-container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            margin-top: 2rem;
-            .bendita-beleza-image {
-                width: 10rem;
-                height: 10rem;
-                margin-bottom: 1rem;
-            }
-            .bendita-beleza-title {
-                text-align: center;
-                font-size: 2.8rem;
-                font-weight: 300;
-                font-family: "Merriweather", 'Inter', sans-serif;
-                color: #010101;
-                margin-bottom: .3rem;
-            }
-            .bendita-beleza-paragraph {
-                font-family: "Merriweather", 'Inter', sans-serif;
-                font-weight: 200;
-                font-size: 1.8rem;
-                color: #010101;
-            }
-        }
-        .social-links {
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            gap: .8rem;
-            margin: 1rem 0 1.5rem 0;
-            .social-link {
-                color: #010101;
-                font-size: 2.2rem;
-            }
-        }
-        .whatsapp-call {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: .8rem;
-            margin-bottom: 8rem;
-            .whatsapp-call-paragraph {
-                font-size: 1.6rem;
-                text-align: center;
-                max-width: 15rem;
-            }
-        }
-    }
-}
+};
