--- a/src/pages/home/components/carouselcard/carouselcard.scss
+++ b/src/pages/home/components/carouselcard/carouselcard.scss
@@ -1,14 +1,13 @@
-@import "../../../styles/global.scss";
+@import "../../../../styles//global.scss";
 
 .carousel-card {
     display: flex;
     flex-direction: column;
-    margin: 4.5rem 0 1rem 0;
     .carousel-card-photo {
         height: 350px;
         width: 100%;
         object-fit: cover;
-    }
+    };
     .carousel-card-buttons {
         display: flex;
         justify-content: center;
@@ -21,8 +20,16 @@
             border-radius: 50%;
             border: solid .1rem #6d6d6d;
             cursor: pointer;
-        } 
-    }
+        };
+        .circle-button-active {
+            width: 1rem;
+            height: 1rem;
+            background-color: #6d6d6d;
+            border-radius: 50%;
+            border: solid .1rem #6d6d6d;
+            cursor: pointer;
+        };
+    };
     .carousel-card-text-area {
         padding: 1rem 1.8rem .5rem 1.8rem;
         border-radius: 0 0 5px 5px;
@@ -34,8 +41,8 @@
             font-size: 1.1rem;
             max-width: 272px;
             text-align: center;
-        }
-        .carousel-card-button-area{
+        };
+        .carousel-card-button-area {
             display: flex;
             align-items: center;
             justify-content: center;
@@ -45,68 +52,59 @@
             margin: .5rem 0;
             .carousel-card-button-area-paragraph {
                 font-size: .7rem;
-            }
-        }
-    }
-}
+            };
+        };
+    };
+};
 
 @media (min-width: 321px) and (max-width: 767px) {
     .carousel-card {
-        margin-top: 0;
-        margin: 5.5rem 0 1rem 0;
         box-shadow: 1px 1px 3px #999999;
         width: 320px;
         .carousel-card-photo {
-            width: 100%;
-            height: 350px;
             border-radius: 5px 5px 0 0;
-        }
+        };
         .carousel-card-buttons .circle-button {
             background-color: transparent;
             border-radius: 50%;
             border: solid .1rem #6d6d6d;
-        }
+        };
         .carousel-card-text-area {
             padding: 1rem 1.6rem 2rem 1.6rem;
-            border-radius: 0 0 5px 5px;
             .carousel-card-text-area-paragraph{
                 font-size: 1.2rem;
                 text-align: left;
-            }
+            };
             .carousel-card-button-area {
-                display: flex;
-                align-items: center;
                 justify-content: flex-start;
-                width: 100%;
-                gap: .5rem;
-                flex-wrap: wrap;
-                margin: .5rem 0;
                 .carousel-card-button-area-paragraph {
                     font-size: .8rem;
-                }
-            }
-        }
-    }
-}
+                };
+            };
+        };
+    };
+};
 
 @media (min-width: 768px) and (max-width: 1023px) {
     .carousel-card {
-        margin: 9rem 0 1rem 0;
         box-shadow: 1px 1px 3px #999999;
         width: 32rem;
         .carousel-card-photo  {
-            width: 100%;
             height: 32rem;
             border-radius: 5px 5px 0 0;
-        }
+        };
         .carousel-card-buttons {
             margin-top: 1.5rem;
             gap: 1.2rem;
             .circle-button {
                 width:  1.4rem;
                 height: 1.4rem;
-            }
-        }
+            };
+            .circle-button-active {
+                width:  1.4rem;
+                height: 1.4rem;
+            };
+        };
         .carousel-card-text-area {
             padding: 1.5rem 2.6rem 3rem 2.6rem;
             border-radius: 0 0 5px 5px;
@@ -114,42 +112,40 @@
                 font-size: 1.8rem;
                 max-width: 27rem;
                 text-align: left;
-            }
+            };
             .carousel-card-button-area {
-                display: flex;
-                align-items: center;
                 justify-content: flex-start;
-                width: 100%;
                 gap: 1rem;
-                flex-wrap: wrap;
-                margin: .5rem 0;
                 .carousel-card-button-area-paragraph {
                     font-size: 1.3rem;
-                }
-            }
-        }
+                };
+            };
+        };
         
-    }
-}
+    };
+};
 
 @media (min-width: 1024px) and (max-width: 1439px) {
     .carousel-card {
-        margin: 11rem 0 1rem 0;
         box-shadow: 1px 1px 3px #999999;
         width: 32rem;
         .carousel-card-photo  {
             width: 100%;
             height: 30rem;
             border-radius: 5px 5px 0 0;
-        }
+        };
         .carousel-card-buttons {
             margin-top: 1.5rem;
             gap: 1.2rem;
             .circle-button {
                 width:  1.4rem;
                 height: 1.4rem;
-            }
-        }
+            };
+            .circle-button-active {
+                width:  1.4rem;
+                height: 1.4rem;
+            };
+        };
         .carousel-card-text-area{
             padding: 1.5rem 2.6rem 3rem 2.6rem;
             border-radius: 0 0 5px 5px;
@@ -157,41 +153,39 @@
                 font-size: 1.8rem;
                 max-width: 27rem;
                 text-align: left;
-            }
+            };
             .carousel-card-button-area {
-                display: flex;
-                align-items: center;
                 justify-content: flex-start;
-                width: 100%;
                 gap: 1rem;
-                flex-wrap: wrap;
-                margin: .5rem 0;
                 .carousel-card-button-area-paragraph {
                     font-size: 1.3rem;
-                }
-            }
-        }
-    }
-}
+                };
+            };
+        };
+    };
+};
 
 @media (min-width: 1440px) {
     .carousel-card {
-        margin: 9rem 0 1rem 0;
         box-shadow: 1px 1px 3px #999999;
         width: 28rem;
         .carousel-card-photo {
             width: 100%;
             height: 30rem;
             border-radius: 5px 5px 0 0;
-        }
+        };
         .carousel-card-buttons {
             margin-top: 1.5rem;
             gap: 1.2rem;
             .circle-button {
                 width:  1.4rem;
                 height: 1.4rem;
-            }
-        }
+            };
+            .circle-button-active {
+                width:  1.4rem;
+                height: 1.4rem;
+            };
+        };
         .carousel-card-text-area {
             padding: 1.5rem 2.4rem 2rem 2.4rem;
             border-radius: 0 0 5px 5px;
@@ -199,19 +193,14 @@
                 font-size: 1.6rem;
                 max-width: 23rem;
                 text-align: left;
-            }
+            };
             .carousel-card-button-area {
-                display: flex;
-                align-items: center;
                 justify-content: flex-start;
-                width: 100%;
                 gap: 1rem;
-                flex-wrap: wrap;
-                margin: .5rem 0;
                 .carousel-card-button-area-paragraph {
                     font-size: 1.1rem;
-                }
-            }
-        }
-    }
-}
+                };
+            };
+        };
+    };
+};
