--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -6,59 +6,20 @@
     justify-content: center;
     align-items: center;
     background-color: #ffffff;
-    .bendita-beleza-title {
-        text-align: center;
-        font-size: 1.4rem;
-        font-weight: 300;
-        font-family: "Merriweather", 'Inter', sans-serif;
-        color: #010101;
-        margin: 1.5rem 1rem .1rem 1rem;
-    }
-    .bendita-beleza-paragraph {
-        font-family: "Merriweather", 'Inter', sans-serif;
-        font-weight: 200;
-        font-size: .8rem;
-        color: #010101;
-        margin: 0 1rem 1.5rem 1rem;
-    }
-}
+    padding: 4rem 0;
+    gap: 2rem
+};
 
-@media (min-width: 321px) and (max-width: 767px){
+@media (min-width: 321px) and (max-width: 767px) {
     #home-page {
-        .bendita-beleza-title {
-            text-align: center;
-            font-size: 1.6rem;
-            font-weight: 300;
-            font-family: "Merriweather", 'Inter', sans-serif;
-            color: #010101;
-            margin: 2.5rem 0 .1rem 0;
-        }
-        .bendita-beleza-paragraph {
-            font-family: "Merriweather", 'Inter', sans-serif;
-            font-weight: 200;
-            font-size: 1rem;
-            color: #010101;
-            margin: 0 0 2.5rem 0;
-        }
-    }
+        padding: 6rem 0 3rem 0;
+        gap: 3rem
+    };
 }
 
 @media (min-width: 768px) {
     #home-page {
-        .bendita-beleza-title {
-            text-align: center;
-            font-size: 2.4rem;
-            font-weight: 300;
-            font-family: "Merriweather", 'Inter', sans-serif;
-            color: #010101;
-            margin: 5rem 0 .5rem 0;
-        }
-        .bendita-beleza-paragraph {
-            font-family: "Merriweather", 'Inter', sans-serif;
-            font-weight: 200;
-            font-size: 1.6rem;
-            color: #010101;
-            margin: 0 0 5rem 0;
-        }
-    }
-}
+        padding: 10rem 0 6rem;
+        gap: 3rem
+    };
+};
