Style: organize line breaks in text for improved readability

--- a/src/pages/about/components/presentation/presentation.scss
+++ b/src/pages/about/components/presentation/presentation.scss
@@ -9,6 +9,8 @@
         margin: 0 1.2rem;
     };
     .presentation-paragraph:last-child {
+        display: flex;
+        flex-direction: column;
         text-align: center;
         .underline {
             text-decoration: underline;
