--- a/src/pages/location/components/map/map.scss
+++ b/src/pages/location/components/map/map.scss
@@ -4,12 +4,13 @@
     border: none;
     border-radius: .4rem;
 }
+.iframe-none {
+    display: none;
+}
 
 @media (min-width: 768px) {
     .iframe {
         width: 40rem;
         height: 20rem;
-        border: none;
-        border-radius: .4rem;
-    }
-}
+    };
+};
