--- a/src/pages/location/location.scss
+++ b/src/pages/location/location.scss
@@ -1,63 +1,12 @@
 #location-page {
     display: flex;
     flex-direction: column;
+    align-items: center;
     margin-bottom: 4rem;
-    .localization-page-iframe {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        #map {
-            width: 80vw;
-            height: 10rem;
-            border: none;
-            border-radius: .4rem;
-        }
-        .iframe-data {
-            display: flex;
-            flex-direction: column;
-            padding: 2rem;
-            gap: 1rem;
-            .iframe-paragraph {
-                display: flex;
-                flex-direction: column;
-                font-size: 1rem;
-                color: #010101;
-                text-align: center;
-                max-width: 18rem;
-            }
-        }
-    }
-}
+};
 
 @media (min-width: 768px) {
     #location-page {
-        display: flex;
-        flex-direction: column;
         margin-bottom: 6rem;
-        .localization-page-iframe {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            #map {
-                width: 40rem;
-                height: 20rem;
-                border: none;
-                border-radius: .4rem;
-            }
-            .iframe-data {
-                display: flex;
-                flex-direction: column;
-                padding: 3rem 2rem 2rem 2rem;
-                gap: 1rem;
-                .iframe-paragraph {
-                    font-size: 1.6rem;
-                    color: #010101;
-                    text-align: center;
-                    max-width: 30rem;
-                }
-            }
-        }
-    }
-}
+    };
+};
